solved some Alignment problem.

--- a/src/css/css-responsive.css
+++ b/src/css/css-responsive.css
@@ -180,7 +180,7 @@
     & .box-container {
       & .box {
         ul {
-          padding: 2rem 1rem 2rem 3rem;
+          padding: 2rem 1rem 2rem 4.5rem;
         }
       }
     }
